--- a/presentation/comps.Rmd
+++ b/presentation/comps.Rmd
@@ -97,6 +97,69 @@ knitr::include_graphics("composition.jpg")
 An important part of the biotic elements in cities is the urban forest. We can think of the urban forest as all trees, shrubs, and greenspaces within an urban area and it is part of the biotic elements found within cities. The urban forest is critical to human well-being and different components of the urban forest function extremely differently. For example, we can imagine the forest remnant pictured on the far left providing really different ecosystem functions than a managed park or a green roof, on the right. A remnant forest may provide better habitat for wildlife and support more native species. Whereas a managed park may provide more mental health benefits and a green roof may add green space to an extremely dense environment. However, they can also all decrease air temperatures and store carbon, although albeit with different capacities. 
 
 ---
+class: mainconcepts
+
+# .small[Ecosystem Services]
+- The benefits that humans derive from nature 
+
+```{r, echo = F, warning = F, message=F,  fig.align='center',fig.retina = 2.5}
+library(data.table)
+library(ggplot2)
+library(ggrepel)
+
+demand <- rep(0,101)
+x <- seq(0, 100, by = 1)
+pressure <- dnorm(x, mean = 50, sd = 10)
+capacity <- (dnorm(x, mean = 75, sd = 15))*-1
+
+df <- data.frame(demand = demand, pressure = pressure, capacity = capacity, time = 1:101)
+df <- melt(df ,  id.vars = 'time', variable.name = 'ES')
+df$ES <- as.factor(df$ES)
+
+data_label <- df
+data_label$label <- NA
+data_label$label[which(data_label$time == max(data_label$time))] <- data_label$ES[which(data_label$time == max(data_label$time))]
+data_label['label'][data_label['label'] == '1'] <- 'demand'
+data_label['label'][data_label['label'] == '2'] <- 'pressure'
+data_label['label'][data_label['label'] == '3'] <- 'capacity'
+
+cols <- c('#9cc184', '#447243', '#1e3d14')
+
+ggplot(aes(x = time, y = value, colour = ES), data = data_label) + 
+  geom_line(size = 1) + 
+  scale_colour_manual(values = cols) + 
+  geom_label_repel(aes(label = label),
+                   nudge_x = 3,
+                   na.rm = TRUE) +
+  theme_classic() + 
+  xlab(label = "Time") + 
+  ylab(label = " ") + 
+  xlim(0,115) + 
+  theme(axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "none",
+        panel.background = element_rect(fill = "#e7e5cc", color = NA),
+        plot.background = element_rect(fill = "#e7e5cc", color = NA)
+        )
+```
+
+.small[.footnote[
+[7]: Adapted from Villamagna   
+et al. 2013. [Ecological Complexity](https://linkinghub.elsevier.com/retrieve/pii/S1476945X1300055X)
+]]
+
+
+???
+
+Now, when we discuss all the benefits that we receive from the urban forest (and other biotic elements within our cities), we often refer to the benefits as "ecosystem services".  In my thesis, and proposal, I really focus exclusively on ecosystem service capacity - which is the total potential of an ecosystem to produce a service. However, factors such as pressure and demand inherently influence both capacity, and importantly, flow of ecosystem services. 
+
+We can use this diagram to imagine a system where demand for ecosystem services is kept constant through time. However, we see a pressure, a physical stressors acting on an ecosystem such as a storm increasing, which subsequently causes a decrease in the capacity perhaps due to tree death/removal. This example demonstrates that each part of the ecosystem services framework is really imprtant to understand if we want to understand the actual flow and delivery of ES. However, its also really complex and in my thesis I have chosen to focus on specifically capacity because it underlines it all - because with no capacity there can be no provision
+
+
+
+---
 class: mainconcepts 
 
 # .small[Inequity]
@@ -184,66 +247,6 @@ knitr::include_graphics("frederickbacknow.jpg")
 
 That past land use probably influence the subsequent functioning of that ecosystem through many legacy effects, even when the land use has changed to something else, perhaps a park - such as here in Frederick-Back
 
----
-class: mainconcepts
-
-# .small[Ecosystem Services]
-- The benefits that humans derive from nature 
-
-```{r, echo = F, warning = F, message=F,  fig.align='center',fig.retina = 2.5}
-library(data.table)
-library(ggplot2)
-library(ggrepel)
-
-demand <- rep(0,101)
-x <- seq(0, 100, by = 1)
-pressure <- dnorm(x, mean = 50, sd = 10)
-capacity <- (dnorm(x, mean = 75, sd = 15))*-1
-
-df <- data.frame(demand = demand, pressure = pressure, capacity = capacity, time = 1:101)
-df <- melt(df ,  id.vars = 'time', variable.name = 'ES')
-df$ES <- as.factor(df$ES)
-
-data_label <- df
-data_label$label <- NA
-data_label$label[which(data_label$time == max(data_label$time))] <- data_label$ES[which(data_label$time == max(data_label$time))]
-data_label['label'][data_label['label'] == '1'] <- 'demand'
-data_label['label'][data_label['label'] == '2'] <- 'pressure'
-data_label['label'][data_label['label'] == '3'] <- 'capacity'
-
-cols <- c('#9cc184', '#447243', '#1e3d14')
-
-ggplot(aes(x = time, y = value, colour = ES), data = data_label) + 
-  geom_line(size = 1) + 
-  scale_colour_manual(values = cols) + 
-  geom_label_repel(aes(label = label),
-                   nudge_x = 3,
-                   na.rm = TRUE) +
-  theme_classic() + 
-  xlab(label = "Time") + 
-  ylab(label = " ") + 
-  xlim(0,115) + 
-  theme(axis.text.x = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        legend.position = "none",
-        panel.background = element_rect(fill = "#e7e5cc", color = NA),
-        plot.background = element_rect(fill = "#e7e5cc", color = NA)
-        )
-```
-
-.small[.footnote[
-[7]: Adapted from Villamagna   
-et al. 2013. [Ecological Complexity](https://linkinghub.elsevier.com/retrieve/pii/S1476945X1300055X)
-]]
-
-
-???
-
-Now, when we discuss all the benefits that we receive from the urban forest (and other biotic elements within our cities), we often refer to the benefits as "ecosystem services".  In my thesis, and proposal, I really focus exclusively on ecosystem service capacity - which is the total potential of an ecosystem to produce a service. However, factors such as pressure and demand inherently influence both capacity, and importantly, flow of ecosystem services. 
-
-We can use this diagram to imagine a system where demand for ecosystem services is kept constant through time. However, we see a pressure, a physical stressors acting on an ecosystem such as a storm increasing, which subsequently causes a decrease in the capacity perhaps due to tree death/removal. This example demonstrates that each part of the ecosystem services framework is really imprtant to understand if we want to understand the actual flow and delivery of ES. However, its also really complex and in my thesis I have chosen to focus on specifically capacity because it underlines it all - because with no capacity there can be no provision
 
 ---
 class: introduction 
@@ -441,7 +444,37 @@ class: chaptertwo
 
 **Proposed Analysis**
 
-- Diagrams to come
+```{r, echo = F, eval = T, warning = F, message = F, fig.align='center', fig.retina = 2}
+library(data.table)
+library(ggplot2)
+
+
+df2 <- data.table(ParkType = rep(factor(c("Industrial", "Agricultural", "Natural")), length.out = 30), ESCapacity = rnorm(n = 30, mean = c(1, 5, 7), sd = 1), HMinorities = 
+                    rnorm(n = 30, mean = c(5, 0, -5), sd = 1), CMinorities = rnorm(n = 30, mean = c(1, 0, -1), sd = 1))
+
+df2l <- melt(df2, id.vars = c("ParkType"),
+                measure.vars = c("ESCapacity", "HMinorities", "CMinorities"))
+
+df2l$variable <- as.factor(df2l$variable)
+df2l$ParkType <- factor(df2l$ParkType,     # Reorder factor levels
+                         c("Industrial", "Agricultural", "Natural"))
+
+labelnames <- c('ESCapacity' = "Service Capacity", 'HMinorities' = "Historical Minorities", 'CMinorities' = "Current Minorities")
+
+ggplot(df2l, aes(x = ParkType, y = value)) + 
+  geom_boxplot(fill = '#e7e5cc') + 
+  geom_jitter() +
+  theme_classic() +
+  theme(
+    panel.background = element_rect(fill='#e7e5cc'), #transparent panel bg
+    plot.background = element_rect(fill='#e7e5cc', color=NA),
+    strip.background = element_rect(fill='#e7e5cc'),
+    strip.text.x = element_text(size = 15)) + #transparent plot bg
+  ylab("") + 
+  xlab("Park Type") + 
+  facet_wrap(vars(variable), scales = "free_y", labeller = as_labeller(labelnames, multi_line = T))
+
+```
 
 ---
 class: chapterthree
